--- a/styles.css
+++ b/styles.css
@@ -293,19 +293,19 @@ span.email-button:hover p {
   }
 
   input {
-    width: 250px;
+    width: 250px !important;
   }
 
   .duo-label {
-    display: block;
-    text-align: center;
+    display: block !important;
+    text-align: center !important;
   }
 
   #stars {
-    width: 200px;
+    width: 200px !important;
   }
 
   footer h2 {
-    font-size: 28px;
+    font-size: 28px !important;
   }
 }
