--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ h3 {
 li {
   color: #121738;
   font-size: 28px;
+  font-family: Campton-book;
 }
 #logo {
   width: 295px;
@@ -307,5 +308,17 @@ span.email-button:hover p {
 
   footer h2 {
     font-size: 28px !important;
+  }
+
+  h1 {
+    font-size: 25px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  h3 {
+    font-size: 16px;
   }
 }
