--- a/styles.css
+++ b/styles.css
@@ -241,6 +241,10 @@ span.email-button:hover p {
     height: auto;
   }
 
+  body {
+    margin: 5px !important;
+  }
+
   div.checkout {
     display: block;
     padding-top: 25px;
@@ -254,6 +258,7 @@ span.email-button:hover p {
   .checkout {
     position: static !important;
     width: 100% !important;
+    padding-top: 10px !important;
   }
 
   .left {
