--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ h3 {
 li {
   color: #121738;
   font-size: 28px;
-  font-family: Campton-bold;
+  font-family: Campton-light;
 }
 #logo {
   width: 295px;
